--- a/src/assets/css/component/icon.css
+++ b/src/assets/css/component/icon.css
@@ -210,3 +210,19 @@
   width: 10px;
   height: 10px;
 }
+
+.icon-show-password {
+  mask: var(--url-image) no-repeat -22px -377px;
+  -webkit-mask: var(--url-image) no-repeat -22px -377px;
+  width: 20px;
+  height: 15px;
+  background-color: #000;
+}
+
+.icon-hide-password {
+  mask: var(--url-image) no-repeat -66px -375px;
+  -webkit-mask: var(--url-image) no-repeat -66px -375px;
+  width: 21px;
+  height: 17px;
+  background-color: #000;
+}
