--- a/src/assets/css/component/icon.css
+++ b/src/assets/css/component/icon.css
@@ -226,3 +226,33 @@
   height: 17px;
   background-color: #000;
 }
+
+.icon-increase-page {
+  background: var(--url-image) no-repeat -110px -420px;
+  width: 20px;
+  height: 15px;
+}
+
+.icon-print {
+  background: var(--url-image) no-repeat -331px -67px;
+  width: 18px;
+  height: 18px;
+}
+
+.icon-ellpise {
+  background: var(--url-image) no-repeat -383px -26px;
+  width: 3px;
+  height: 13px;
+}
+
+.icon-add-square {
+  background: var(--url-image) no-repeat -375px -419px;
+  width: 18px;
+  height: 18px;
+}
+
+.icon-minus-circle {
+  background: var(--url-image) no-repeat -375px -463px;
+  width: 18px;
+  height: 18px;
+}
